Add get requests for storage service
